--- a/_posts/2021-05-07-环形缓冲区.md
+++ b/_posts/2021-05-07-环形缓冲区.md
@@ -17,3 +17,76 @@ toc: true
 当有大量数据的时候，不能存储所有的数据，只有当前面的数据处理完才释放数据再处理下一个，已经处理的数据的内存会被浪费掉。因为后来的数据只能往后排队
 
 环形缓冲区不用频繁的分配内存，内存的反复使用使得我们用更少的内存块做更多的事
+
+#### shuffle中的环形缓冲区
+
+在Mapper端业务逻辑走完后，调用MapOutputCollector.collect输出结果，该接口由MapTask.MapOutputBuffer来实现，充当环形缓冲区。
+
+```java
+// k/v accounting
+// 存放meta数据的IntBuffer，都是int entry，占4byte
+private IntBuffer kvmeta; // 键值对的元数据，每个kv都有一个
+int kvstart;            // 元数据起始位置
+int kvend;              // 元数据结束的位置
+int kvindex;            // 元数据的结尾，即下次元数据开始的位置
+// 分割meta和key value内容的标识
+// meta数据和key value内容都存放在同一个环形缓冲区，所以需要分隔开
+int equator;            // 赤道，分割开meta和key value
+int bufstart;           // 标记记录开始
+int bufend;             // 标记记录结尾
+int bufmark;            // 标记记录结束
+int bufindex;           // 和kvstart/kvend/kvindex相同
+int bufvoid;            // 在缓冲区的末尾标记我们应该停止读取的点
+// 存放key value的byte数组，单位是byte，注意与kvmeta区分
+byte[] kvbuffer;        // main output buffer
+private final byte[] b0 = new byte[0];
+
+// key value在kvbuffer中的地址存放在偏移kvindex的距离
+private static final int VALSTART = 0;         // val offset in acct
+private static final int KEYSTART = 1;         // key offset in acct
+// partition信息存在kvmeta中偏移kvindex的距离
+private static final int PARTITION = 2;        // partition offset in acct
+private static final int VALLEN = 3;           // length of value
+// 一对key value的meta数据在kvmeta中占用的个数
+private static final int NMETA = 4;            // num meta ints
+// 一对key value的meta数据在kvmeta中占用的byte数
+private static final int METASIZE = NMETA * 4; // size in bytes
+```
+
+1. MapOutputBuffer的init方法
+
+   ```java
+   kvbuffer = new byte[maxMemUsage]; // 创建一个100M大小的字节数组
+   bufvoid = kvbuffer.length;
+   kvmeta = ByteBuffer.wrap(kvbuffer).order(ByteOrder.nativeOrder()).asIntBuffer(); // 通过伪装得到一个元数据数组
+   setEquator(0);  // 设置初始的赤道的位置为0
+   bufstart = bufend = bufindex = equator;
+   kvstart = kvend = kvindex;
+   private void setEquator(int pos) {
+            final int aligned = pos - (pos % METASIZE);  //在这里pos为0, 所以aligned=0
+            kvindex =
+           ((aligned - METASIZE + kvbuffer.length) % kvbuffer.length) / 4;
+       	// 26214396
+       }
+   ```
+
+   kvbuffer和kvmeta在内存中指向的是同一个数组，为100m大小的byte数组，key/value数据和元数据在环形缓冲区中的存储是由equator分隔的，key/value按照索引递增的方向存储，元数据则按照索引递减的方向存储，将数组抽象为一个环形结构之后，以equator为界，key/value顺时针存储，元数据逆时针存储。
+
+2. 环形缓冲区的结构
+
+   整个环形缓冲区以赤道为起点，向两边读写数据
+
+   元数据存储分区信息和kvbuffer在数组中的位置信息
+
+   ![image.png](https://ucc.alicdn.com/pic/developer-ecology/c619d2b63f1b4faea9d65cb65fed0cb0.png)
+
+   ![img](https://img-blog.csdnimg.cn/20201209205629492.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3hpYW94aV9oYWhhaGE=,size_16,color_FFFFFF,t_70)
+
+   valstart存储value的起始位置，keystart存放key的起始位置，partition存放partition，vallen存放value的长度。
+
+3. 写入buffer
+
+   Map通过OutputCollector.write方法调用collector.collect向buffer中写入数据
+
+   
+
